projects/portfolio/src/client/main.css
@import "tailwindcss";
/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap'); */
@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap");

@config '../../tailwind.config.ts';

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

@theme {
  --color-primary-50: #f8fafc;
  --color-primary-100: #f1f5f9;
  --color-primary-200: #e2e8f0;
  --color-primary-300: #cbd5e1;
  --color-primary-400: #94a3b8;
  --color-primary-500: #64748b;
  --color-primary-600: #475569;
  --color-primary-700: #334155;
  --color-primary-800: #1e293b;
  --color-primary-900: #0f172a;
  --color-primary-950: #020617;
}

@layer utilities {
  .h-calc {
    height: calc(100vh - var(--height));
  }
}

body {
  /* font-family: "Noto Sans JP", sans-serif; */
  font-family: "M PLUS Rounded 1c", sans-serif;
}

/*
  react-markdown customs
*/

/* インラインコードブロックのスタイル */
.prose p code {
  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-1;
}

/* インラインコードブロックの before スタイルを無効にする */
:where(.prose p code):not(
    :where([class~="not-prose"], [class~="not-prose"] *)
  )::before {
  content: none;
}

/* インラインコードブロックの after スタイルを無効にする */
:where(.prose p code):not(
    :where([class~="not-prose"], [class~="not-prose"] *)
  )::after {
  content: none;
}

/* コードブロック内のトークンスタイルを無効にする */
.prose pre code span.token {
  background: unset !important;
}

